Use better fn names for api collection, single
